# embedded-machine-learning

./: .gitignore  CMakeLists.txt  Evaluation.md  ProgrammationSeances.md  Présentation_EML.pptx  README.md  eval.sh  evaluation.sh  readme.bash  readme.org  setup.sh  ~$Présentation_EML.pptx
ANN/: CMakeLists.txt  prediction_ann.cpp  train_ann.py
ANN/Python/: ann.py
CART/: CART.py  CMakeLists.txt  Crop recommandations  cart_evaluation.cpp  evaluate_cart.cpp  evaluate_performance.cpp  music_styles.cpp  music_styles_cart.cpp  music_styles_cart.h  prediction_cart.cpp  train_cart.py
CART/Python/: CART.py  Crop recommandations  CropRec_main.py  main_cart.py  temp.cpp  test_cart.py
DATA/: ann_stats.txt  ann_weights.txt  features_testing.csv  features_training.csv  file_list_test.txt  file_list_train.txt  svm_coeff.csv  svm_feat_stats.csv  tests.org
DATASETS/: coeffs.csv
Evaluation/: CMakeLists.txt  evaluate_ann.cpp  evaluate_cart.cpp  evaluate_svm.cpp  evaluation_cart.cpp  evaluation_svm.cpp
Extraction/: CMakeLists.txt  fearures_extraction.cpp  features_extraction.cpp  features_extraction.h  main.cpp
Helpers/: au_reading.h  etypes.h  file_helpers.h  globals.h  music_style_helpers.cpp  music_style_helpers.h  print_helpers.h  signal.h  wav_reading.h
SVM/: CMakeLists.txt  main.cpp  music_styles_svm.cpp  prediction_svm.cpp  svm.py  svm_coeff.csv  svm_evaluation.cpp  svm_feat_stats.csv  train_svm.py
SVM/Python/: svm.py
